@@ -1,3 +1,10 @@
+2010-09-16  Christophe Rhodes  <csr21@cantab.net>
+
+	Image display support for the REPL.
+
+	* slime-media.el: New file.
+	* swank-media.lisp: New file.
+
 2010-09-09  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-c-p-c.lisp (longest-compound-prefix): Wrong arguments for
